--- a/Exercice JavaScript/Exercice 10 Les événements/exercice2.html
+++ b/Exercice JavaScript/Exercice 10 Les événements/exercice2.html
@@ -8,8 +8,10 @@
 <body>
     <script src = "exercice2.js"></script>
 
-
-    <p onClick="prompt('Contrôle')">Clique ici</p>
+    <p>Saisissez un texte puis pressez le bouton "Contrôle"</p>
+    <input type="text" id="text">
+    <input type="button" id="button" value="Contrôle" onclick="butt()">
+    
 
 </body>
 </html>
