--- a/Exercice JavaScript/Exercice 11 Les formulaires/contact.html
+++ b/Exercice JavaScript/Exercice 11 Les formulaires/contact.html
@@ -11,18 +11,18 @@
 
     <form method="post">
         <fieldset>
-        <legend><b>Vos coordonnées</b></legend>
-        <p class="zone"><b>*Ces zones sont obligatoires pour envoyer le formulaire.</b></p>
-        <p><label for="société"><b>Société*</b></label><input type="text" name="société" id="societe" required></p>
-        <p><label for="personne_a_contacter"><b>Personne à contacter*</b></label><input type="text" name="personne_a_contacter" id="personne_a_contacter" required></p>
-        <b>Adresse de l'entreprise</b><textarea name="adresse_entreprise" rows="3" cols="21" required></textarea>
-        <p><label for="code_postal"><b>Code Postal*</b></label><input type="text" name="code_postal" id="code_postal" required></p>
-        <p><label for="ville"><b>Ville*</b></label><input type="text" name="ville" id="ville" required></p>
-        <p><lable for="e_mail"><b>E-Mail*</b></lable><input type="text" name="e_mail" id="email" required></p>
-        <p><lable for="telephone"><b>Téléphone</b></lable><input type="text" name="telephone"></p>
-        <b>Sélectionnez l'environnement technique du projet</b><textarea name="environnement_tech_projet" rows="3" cols="21"></textarea>
+        <h1>Vos coordonnées</h1>
+        <span class = "etoiletitre">*</span> <span class="zonetete"><b>Ces zones sont obligatoires pour envoyer le formulaire.</b></span>
+        <p><label for="société"><b>Société</b></label><input type="text" name="société" id="societe" required><span class="etoile"> *</span></p>
+        <p><label for="personne_a_contacter"><b>Personne à contacter :</b></label><input type="text" name="personne_a_contacter" id="personne_a_contacter" required><span class="etoile"> *</span></p>
+        <b><label for= "adresse_entreprise">Adresse de l'entreprise :</b></label><textarea name="adresse_entreprise" rows="3" cols="21" required></textarea>
+        <p><label for="code_postal"><b>Code Postal :</b></label><input type="text" name="code_postal" id="code_postal" required><span class="etoile"> *</span></p>
+        <p><label for="ville"><b>Ville :</b></label><input type="text" name="ville" id="ville" required><span class="etoile"> *</span></p>
+        <p><label for="e_mail"><b>E-Mail :</b></label><input type="text" name="e_mail" id="email" required><span class="etoile"> *</span></p>
+        <p><label for="telephone"><b>Téléphone :</b></label><input type="text" name="telephone"></p>
+        <b><label for="environnement_tech_projet">Sélectionnez l'environnement technique du projet:</b></label><textarea name="environnement_tech_projet" rows="3" cols="21"></textarea>
         <br><select id="liste_deroulante" name="liste_deroulante">
-            <option id="remove" value="choix" selected visible="false">Choisissez</option> <!--"remove" en JS-->
+            <option id="remove" value="choix" selected visible="false">Choisissez</option>
             <option value="Access">Access</option>
             <option value="Java">Java</option>
             <option value="Delphi">Delphi</option>
@@ -36,11 +36,11 @@
             <option value="SQL Server">SQL Server</option>
             <option value="Oracle">Oracle</option>
             <option value="Autres...">Autres...</option>
-        </select>
-        <input type = "submit" value="Envoyer" onclick="verification()">
+        </select><br><br>
+        <input class="bouton" type = "submit" value="Envoyer" onclick="verification()">
         <input type = "reset" value ="Annuler">
         </fieldset>
     </form>
-    <script src = "contact.js"></script>
+    <script src = "contact.js"></script> <!--TOUJOURS METTRE LE SCRIPT EN BAS DU BODY-->
 </body>
 </html>
