--- a/Exercice JavaScript/Exercice 11 Les formulaires/contact.html
+++ b/Exercice JavaScript/Exercice 11 Les formulaires/contact.html
@@ -15,7 +15,7 @@
         <span class = "etoiletitre">*</span> <span class="zonetete"><b>Ces zones sont obligatoires pour envoyer le formulaire.</b></span>
         <p><label for="société"><b>Société</b></label><input type="text" name="société" id="societe" required><span class="etoile"> *</span></p>
         <p><label for="personne_a_contacter"><b>Personne à contacter :</b></label><input type="text" name="personne_a_contacter" id="personne_a_contacter" required><span class="etoile"> *</span></p>
-        <b><label for= "adresse_entreprise">Adresse de l'entreprise :</b></label><textarea name="adresse_entreprise" rows="3" cols="21" required></textarea>
+        <b><label for= "adresse_entreprise">Adresse de l'entreprise :</b></label><textarea name="adresse_entreprise" rows="3" cols="21"></textarea>
         <p><label for="code_postal"><b>Code Postal :</b></label><input type="text" name="code_postal" id="code_postal" required><span class="etoile"> *</span></p>
         <p><label for="ville"><b>Ville :</b></label><input type="text" name="ville" id="ville" required><span class="etoile"> *</span></p>
         <p><label for="e_mail"><b>E-Mail :</b></label><input type="text" name="e_mail" id="email" required><span class="etoile"> *</span></p>
